navbar divisions on mobile repaired

--- a/app/styles/components/headers.less
+++ b/app/styles/components/headers.less
@@ -113,7 +113,7 @@ a{
 	}
 	.nav > li{
 	  	vertical-align: center;
-    	box-shadow: 0px 25px 0px -24px @gray-6;
+    	box-shadow: 0px 25px 0px -15px @gray-6;
     	margin-top: 1px;
     	span{
     		display: block;
